fixed sfml games link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
 
             <div class="projet">
-                <a class="nom-projet" href="https://ugo-larsonneur.itch.io/">Projets de jeux avec SFML</a>
+                <a class="nom-projet">Projets de jeux avec SFML</a>
                 <p>Projet à l'IUT d'Aix-en-Provence: développment de 2 jeux en C++ avec SFML</p>
                 </div>
         
