--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <h2>Qui suis-je ?</h2>
             <p>Je suis un joueur de longue date et de tout horizons, mais aussi étudiant en dévelopement de jeu vidéo actuellement à Montréal (Université de Sherbooke) !</p>
-            <p>J'ai plusieurs projets à mon actif, n'hésitez pas à regarder et à me contacter, je suis en recherche de stage en programation de jeu commencent dès que possible.</p>
+            <p>J'ai plusieurs projets à mon actif, n'hésitez pas à regarder et à me contacter, je suis en recherche de stage en programation de jeu commençant  dès que possible.</p>
             
             <!--
             <h2>Experience</h2>
