added canadian cv

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </div>
         <div class="section-2">
         <div style="width: 82%;">
-            <h2><a href="CVCanada.pdf" class="link"><i class="fas fa-file" style="padding-right: 10px;"></i><u>CV</u></a></h2>
+            <h2><a href="CVFrance.pdf" class="link"><i class="fas fa-file" style="padding-right: 10px;"></i><u>CV (France)</u></a></h2>
+            <h2><a href="CVCanada.pdf" class="link"><i class="fas fa-file" style="padding-right: 10px;"></i><u>CV (Canada)</u></a></h2>
 
             <h2>Qui suis-je ?</h2>
             <p>Je suis un joueur de longue date et de tout horizons, mais aussi étudiant en dévelopement de jeu vidéo actuellement à Montréal (Université de Sherbooke) !</p>
