--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <h2>Projets notables</h2>
             <div class="projet">
-            <a class="nom-projet" href="https://www.youtube.com/watch?v=4T1Pb9Szf7E">Mari: Shadows of Pazuzu</a>
+            <a class="nom-projet" href="https://www.youtube.com/watch?v=4T1Pb9Szf7E"><i class="fab fa-youtube" style="padding-right: 10px;"></i>Mari: Shadows of Pazuzu</a>
             <p>Projet à l'université de Sherbrooke: Réalisation d'un rogue like multijoueur sur Unreal Engine ou la coopération et les combinaisons de sorts sont rois !</p>
             </div>
 
@@ -52,35 +52,35 @@
             </div>
             
             <div class="projet">
-            <a class="nom-projet" href="https://www.youtube.com/watch?v=EnYLEAtRXpM">Stellar Road</a>
+            <a class="nom-projet" href="https://www.youtube.com/watch?v=EnYLEAtRXpM"><i class="fab fa-youtube" style="padding-right: 10px;"></i>Stellar Road</a>
             <p>Projet à l'ENSIIE: pendant un programme de 2 mois nous donnant un apperçu de ce qu'est l'entreuprenariat, nous avons moi et 3 collègue expérimenté la création
                 d'une start-up et avons développé un prototype de jeu de course en Réalité virtuelle.
             </p>
             </div>
             
             <div class="projet">
-            <a class="nom-projet" href="https://www.youtube.com/watch?v=Frcpg5eepx4">Terrascape</a>
+            <a class="nom-projet" href="https://www.youtube.com/watch?v=Frcpg5eepx4"><i class="fab fa-youtube" style="padding-right: 10px;"></i>Terrascape</a>
             <p>Projet à l'ENSIIE: Terrascape est une application simple de modelage de terrain, m'ayant fait découvrir le développement en VR.
             </p>
             </div>
 
             <div class="projet">
-                <a class="nom-projet" href="https://youtu.be/46ITLwhfn7E">Cloudy Night</a>
+                <a class="nom-projet" href="https://youtu.be/46ITLwhfn7E"><i class="fab fa-youtube" style="padding-right: 10px;"></i>Cloudy Night</a>
                 <p>Jeu de plateforme jouable entièrement à la souris avec un grappin et un jetpack, née de mes expérimentation avec la simulation de cordes.</p>
             </div>
 
             <div class="projet">
-                <a class="nom-projet" href="https://ugo-larsonneur.itch.io/lily-leap">Lilly Leap</a>
+                <a class="nom-projet" href="https://ugo-larsonneur.itch.io/lily-leap"><i class="fab fa-itch-io" style="padding-right: 10px;"></i>Lilly Leap</a>
                 <p>Projet à l'ENSIIE: Jeu de scoring/arcade inspiré de Frogger, où le but et de faire le plus de sauts possibles.</p>
             </div>
 
             <div class="projet">
-                <a class="nom-projet" href="https://www.youtube.com/watch?v=oWF9Gm9kxdg">Projets de génération procéduralle</a>
+                <a class="nom-projet" href="https://www.youtube.com/watch?v=oWF9Gm9kxdg"><i class="fab fa-youtube" style="padding-right: 10px;"></i>Projets de génération procéduralle</a>
                 <p>La génération procéduralle me fascine, j'ai créé 2 générateur de terrain (Bruit de perlin, Marchin Square) et en prépare un autre avec Gofot (WFC)</p>
             </div>
 
             <div class="projet">
-                <a class="nom-projet" href="https://ugo-larsonneur.itch.io/">Projets de game jams</a>
+                <a class="nom-projet" href="https://ugo-larsonneur.itch.io/"><i class="fab fa-itch-io" style="padding-right: 10px;"></i>Projets de game jams</a>
                 <p>6 projets développés en 48h dans des équipes variés, répértoriés sur ma page itch</p>
                 </div>
 
