added reform express

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 d'une start-up et avons développé un prototype de jeu de course en Réalité virtuelle.
             </p>
             </div>
+
+            <div class="projet">
+                <a class="nom-projet" href="https://ugo-larsonneur.itch.io/jv-reform"><i class="fab fa-itch-io" style="padding-right: 10px;"></i>REform Express</a>
+                <p>Stage de 2023: Game design et développment d'un jeu web de stratégie/gestion de trains à travers l'Europe, réalisé en collaboration avec l'université de Passau afin de promouvoir le projet REform. Jouable sur navigateur Itch.io !</p>
+            </div>
             
             <div class="projet">
             <a class="nom-projet" href="https://www.youtube.com/watch?v=Frcpg5eepx4"><i class="fab fa-youtube" style="padding-right: 10px;"></i>Terrascape</a>
@@ -76,7 +81,7 @@
 
             <div class="projet">
                 <a class="nom-projet" href="https://www.youtube.com/watch?v=oWF9Gm9kxdg"><i class="fab fa-youtube" style="padding-right: 10px;"></i>Projets de génération procéduralle</a>
-                <p>La génération procéduralle me fascine, j'ai créé 2 générateur de terrain (Bruit de perlin, Marchin Square) et en prépare un autre avec Gofot (WFC)</p>
+                <p>La génération procéduralle me fascine, j'ai créé 2 générateur de terrain (Bruit de perlin, Marchin Square) et en prépare un autre avec Godot (WFC)</p>
             </div>
 
             <div class="projet">
